# nexora-printer-manager

./: .gitignore  API_GUIDE.md  BARCODE_INTEGRATION_PLAN.md  Cargo.toml  README.md  RELEASE_NOTES.md  build.rs
.github/workflows/: release.yml
docs/: BACKGROUND_SERVICE.md  INSTALLER_GUIDE.md  README.md
installer/: nexora-installer.iss
src/: autostart.rs  barcode_printer.rs  http_server.rs  image_print.rs  logo_cache.rs  main.rs  template_render.rs  test_menu_id.rs  tray.rs
ui/: main.slint
