[package]
name = "nexora-printer-manager"
version = "1.0.0"
description = "Nexora POS Printer Manager - Professional ESC/POS printer setup and management"
authors = ["Nexora Team"]
license = "GPL-3.0-only"
edition = "2021"

[dependencies]
# UI Framework - Slint
slint = "1.3"

# Printer communication
escpos = "0.13"
serialport = "4.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config storage
directories = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Network scanning
local-ip-address = "0.5"

# Date/time
chrono = "0.4"

# Regex
regex = "1.10"

[build-dependencies]
slint-build = "1.3"
winresource = "0.1"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller binary