[package]
name = "nexora-printer-manager"
version = "1.4.1"
description = "Nexora POS Printer Manager - Professional ESC/POS printer setup and management"
authors = ["Nexora Team"]
license = "GPL-3.0-only"
edition = "2021"

[dependencies]
# UI Framework - Slint
slint = "1.3"

# Printer communication
escpos = "0.13"
serialport = "4.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config auto-start
auto-launch = "0.5"

# Config background
tray-icon = "0.19"
crossbeam-channel = "0.5"

image = "0.25"

# Config storage
directories = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Network scanning
local-ip-address = "0.5"

# Date/time
chrono = "0.4"

# Regex
regex = "1.10"
winreg = "0.56.0"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_Graphics_Printing", "Win32_UI_WindowsAndMessaging"] }
base64 = "0.22.1"
simplelog = "0.12"

[build-dependencies]
slint-build = "1.3"
winresource = "0.1"

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Link-time optimization
codegen-units = 1 # Better optimization
strip = true      # Strip symbols
panic = "abort"   # Smaller binary

